<resources>
    <string name="error_get_inbox_intent">There was a problem getting the inbox intent!</string>
    <string name="error_get_select_opponents">There was a problem getting the select opponents intent!</string>
    <string name="app_name">Polygame</string>
    <string name="app_id">926542191578</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_multiplayer">MultiplayerActivity</string>
    <string name="title_activity_singleplayer_settings">SingleplayerSettingsActivity</string>
    <string name="title_activity_singleplayer">SingleplayerActivity</string>
    <string name="start_game">Start game</string>
    <string name="volume">Volume:</string>
    <string name="music_on_off">Music ON/OFF</string>
    <string name="check">Check</string>
    <string name="back">Back</string>
    <string name="settings">Settings</string>
    <string name="playerOne">Player One: %1$d</string>
    <string name="playerTwo">Player Two: %1$d</string>
    <string name="time_remaining">Time Remaining: %1$d</string>
    <string name="playerOneWon">Player One won!</string>
    <string name="playerTwoWon">Player Two won!</string>
    <string name="draw">Draw!</string>
    <string name="whosthewinner">GameResult</string>
    <string name="ok">OK</string>
    <string name="rematch">REMATCH</string>
    <string name="singleplayer">Singleplayer</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="accountname">AccountName</string>
    <string name="account_problem">Nem sikerült valami!</string>
    <string name="playername">PlayerName</string>
    <string name="playerid">PlayerId</string>
    <string name="start">Start</string>
    <string name="sign_in_error">Sign in error!</string>
    <string name="signin_other_error">Sign in error!</string>
    <string-array name="game_difficulty">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
        <item>Very Hard</item>
    </string-array>
    <string-array name="game_type">
        <item>Player vs Player</item>
        <item>Player vs AI</item>
        <item>AI vs AI</item>
    </string-array>
    <string name="your_turn">It is your turn!</string>
    <string name="their_turn">Waiting for the opponent!</string>

    <string name="first_timer">CgkI2rff0fsaEAIQAQ</string>
    <string name="first_win">CgkI2rff0fsaEAIQAg</string>
    <string name="beginner">CgkI2rff0fsaEAIQAw</string>
</resources>
