<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/menu_check"
            android:checkableBehavior="single"
            android:title="@string/check"
            android:icon="@drawable/ic_check"
            app:showAsAction="ifRoom"/>
    <item
            android:id="@+id/menu_back"
            android:title="@string/back"
            android:checkableBehavior="single"
            android:icon="@drawable/ic_arrow_back"
            app:showAsAction="ifRoom"/>
    <item
            android:id="@+id/menu_settings"
            android:title="@string/settings"
            android:checkableBehavior="single"
            android:icon="@drawable/ic_settings"
            app:showAsAction="ifRoom"/>

</menu>