<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:text="@string/playerOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvPlayerOne"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:textColor="@android:color/holo_blue_dark"/>
    <TextView
            android:text="@string/playerTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvPlayerTwo"
            android:textColor="@android:color/holo_red_dark"
            app:layout_constraintStart_toEndOf="@+id/tvPlayerOne"
            android:layout_marginStart="32dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/tvPlayerOne"/>
    <TextView
            android:text="@string/time_remaining"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvTime"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/tvPlayerTwo"/>


</android.support.constraint.ConstraintLayout>