<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.MainActivity">

    <Button
            android:text="@string/multiplayer"
            android:onClick="onClick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="128dp"
            android:id="@+id/btnMuliPlayer"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="4dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
            android:text="@string/singleplayer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            tools:layout_editor_absoluteX="128dp"
            android:id="@+id/btnSinglePlayer"
            app:layout_constraintTop_toBottomOf="@+id/btnMuliPlayer"/>

    <android.support.v7.widget.AppCompatImageView
            android:src="@drawable/ic_settings"
            android:id="@+id/btnSettings"
            android:onClick="onClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/btnSinglePlayer"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>

    <com.google.android.gms.common.SignInButton
            android:id="@+id/btnSignIn"
            android:onClick="onClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" tools:ignore="MissingConstraints"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btnSettings" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/accountname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvAccountName" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"/>

</android.support.constraint.ConstraintLayout>